kubernetes/base/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      serviceAccountName: server-sa
      containers:
        - name: server
          image: devopscommerce.azurecr.io/server:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: kv-secrets
              mountPath: '/mnt/secrets-store'
              readOnly: true
      volumes:
        - name: kv-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: server-kv-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: server
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
